fixed the logos of main

--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brandon Lynch</title>
+    <title>Kumarsambhav Upadhayaya</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header><a href="index.html" style="color: white; text-decoration: none;">BRANDON LYNCH</a></header>
+    <header style="text-align: left;"><a href="index.html" style="color: white; text-decoration: none;">KUMARSAMBHAV UPADHAYAYA</a></header>
     <nav>
         <a href="about.html">About</a>
         <a href="blog.html">Blog</a>
     </nav>
     <div class="container">
-        <h1>Brandon Lynch</h1>
+        <h1>Kumarsambhav Upadhayaya</h1>
         <p>Security Engineer</p>
         <div class="social-icons">
-            <a href="#" id="github"><img src="github.png" alt="GitHub" width="30"></a>
-            <a href="#" id="twitter"><img src="twitter.png" alt="Twitter" width="30"></a>
-            <a href="#" id="linkedin"><img src="linkedin.png" alt="LinkedIn" width="30"></a>
+            <a href="https://github.com" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
         </div>
     </div>
     <footer>
-        &copy; 2023 Brandon Lynch &middot; Powered by Hugo & Coder-Nord.
+        &copy; 2023 Kumarsambhav Upadhayaya &middot; Powered by Hugo & Coder-Nord.
     </footer>
 </body>
 </html>
