--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     </nav>
     <div class="container">
         <h1>Kumarsambhav Upadhayaya</h1>
-        <p>Security Engineer</p>
+       
         <div class="social-icons">
-            <a href="https://github.com" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
-            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://github.com/ksmbhv" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
+            <a href="https://x.com/0xFlute" target="_blank"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/kumarsambhav-upadhyaya-701a37283/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
         </div>
     </div>
     <footer>
-        &copy; 2023 Kumarsambhav Upadhayaya &middot; Powered by Hugo & Coder-Nord.
+        &copy; 2025 Kumarsambhav Upadhayaya &middot; Powered by janky ass html & <a href="https://www.nordtheme.com/" target="_blank">Nord-Theme</a>.
     </footer>
 </body>
 </html>
