about ko save kia ab nuke karenge lesgo

--- a/about.html
+++ b/about.html
@@ -1,3 +1,11 @@
+<link rel="stylesheet" href="aboutcss.css">
+
+<header style="text-align: left;"><a href="index.html" style="color: white; text-decoration: none;">KUMARSAMBHAV UPADHAYAYA</a></header>
+<nav>
+    <a href="about.html">About</a>
+    <a href="blog.html">Blog</a>
+</nav>
+
 <h1>
-    in work
+    About Me
 </h1>
